--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap");
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
 
@@ -20,6 +19,10 @@
     @apply flex justify-center items-center gap-2;  
 }
 
+@utility flex-between {
+    @apply flex justify-between items-center gap-2; 
+}
+
 @utility flex-align {
     @apply flex items-center gap-2; 
 }
@@ -32,7 +35,6 @@
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
 
-	/* 👇 optional fallback */
 	--font-mono: "JetBrains Mono", monospace;
 }
 
@@ -50,7 +52,7 @@ body {
 	background: var(--background);
 	color: var(--foreground);
 
-	/* 👇 use the custom font var */
+	/* use the custom font var */
 	font-family: var(--font-mono);
 }
 
